Noteworthy changes in version 2.5.5 (unreleased)
------------------------------------------------


  See-also: gnupg-announce/2025q1/000xxx.html
  Release-info: https://dev.gnupg.org/T7530


Noteworthy changes in version 2.5.4 (2025-02-12)
------------------------------------------------

  * gpg: New option --disable-pqc-encryption.  [rG00c31f8b04]

  * gpg: Fix --quick-add-key for Weierstrass ECC with usage given.
    [T7506]

  * gpg: Fix handling with no CRC armor.  [T7071]

  * gpg: New private Kyber keys are now cross-referenced using a new
    Link attribute.  [T6638]

  * gpg: Fix an import problem with keys having another primary key as
    a subkey.  [T7527]

  * gpgsm: Allow unattended PKCS#12 export without passphrase.
    [rG159e801043]

  * gpgsm: Allow CSR generation with an unprotected key.
    [rG89055f24f4]

  * agent: New option --change-std-env-name.  [T7522]

  * agent: Fix ssh-agent's request_identities for skipped Brainpool
    keys.  [rG2469dc5aae]

  * Do not package zlib and bzip2 object files in a speedo release
    build.  [T7442]

  See-also: gnupg-announce/2025q1/000490.html
  Release-info: https://dev.gnupg.org/T7480


Noteworthy changes in version 2.5.3 (2025-01-09)
------------------------------------------------

  * gpg: Allow for signature subpackets of up to 30000 octets.
    [rG36dbca3e69]

  * gpg: Silence expired trusted-key diagnostics in quiet mode.  [T7351]

  * gpg: Allow smaller session keys with Kyber and enforce the use of
    AES-256 if useful.  [T7472]

  * gpg: Fix regression in key generation from existing card key.
    [T7309,T7457]

  * gpg: Print a warning if the card backup key could not be written.
    [T2169]

  * The --supervised options of gpg-agent and dirmngr have been
    renamed to --deprecated-supervised as preparation for their
    removal.  [rGa019a0fcd8]

  * There is no more default for a keyserver.

  See-also: gnupg-announce/2025q1/000489.html
  Release-info: https://dev.gnupg.org/T7442

