@@ -1,6 +1,8 @@
 Noteworthy changes in version 2.5.5 (unreleased)
 ------------------------------------------------
 
+  * gpg: Fix a verification DoS due to a malicious subkey in the
+    keyring.  [T7527]
 
   See-also: gnupg-announce/2025q1/000xxx.html
   Release-info: https://dev.gnupg.org/T7530
